# snakesay

./: .gitignore  README.md  README.rst  pyproject.toml
.github/workflows/: release.yml  test.yaml  test.yml  tests.yaml
snakesay/: __init__.py  snakesay.py
tests/: test_snakesay.py
